@@ -1,4 +1,4 @@
-# Copyright (C) 2008-2013 Free Software Foundation, Inc.
+# Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,6 +13,10 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+if $tracelevel then {
+    strace $tracelevel
+}
 
 #
 # Test the use of VSX registers, for Powerpc.
@@ -29,7 +33,7 @@ set binfile ${objdir}/${subdir}/${testfile}
 set srcfile ${testfile}.c
 
 set compile_flags {debug nowarnings quiet}
-if [get_compiler_info] {
+if [get_compiler_info $binfile] {
     warning "get_compiler failed"
     return -1
 }
@@ -62,11 +66,7 @@ if ![runto_main] then {
 
 set vector_register1 ".uint128 = 0x3ff4cccccccccccc0000000000000000, v2_double = .0x1, 0x0., v4_float = .0x1, 0xf99999a0, 0x0, 0x0., v4_int32 = .0x3ff4cccc, 0xcccccccc, 0x0, 0x0., v8_int16 = .0x3ff4, 0xcccc, 0xcccc, 0xcccc, 0x0, 0x0, 0x0, 0x0., v16_int8 = .0x3f, 0xf4, 0xcc, 0xcc, 0xcc, 0xcc, 0xcc, 0xcc, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0.."
 
-set vector_register1_vr ".uint128 = 0x3ff4cccccccccccc0000000100000001, v4_float = .0x1, 0xf99999a0, 0x0, 0x0., v4_int32 = .0x3ff4cccc, 0xcccccccc, 0x1, 0x1., v8_int16 = .0x3ff4, 0xcccc, 0xcccc, 0xcccc, 0x0, 0x1, 0x0, 0x1., v16_int8 = .0x3f, 0xf4, 0xcc, 0xcc, 0xcc, 0xcc, 0xcc, 0xcc, 0x0, 0x0, 0x0, 0x1, 0x0, 0x0, 0x0, 0x1.."
-
 set vector_register2 "uint128 = 0xdeadbeefdeadbeefdeadbeefdeadbeef, v2_double = .0x1, 0x1., v4_float = .0x0, 0x0, 0x0, 0x0., v4_int32 = .0xdeadbeef, 0xdeadbeef, 0xdeadbeef, 0xdeadbeef., v8_int16 = .0xdead, 0xbeef, 0xdead, 0xbeef, 0xdead, 0xbeef, 0xdead, 0xbeef., v16_int8 = .0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef.."
-
-set vector_register2_vr "uint128 = 0xdeadbeefdeadbeefdeadbeefdeadbeef, v4_float = .0x0, 0x0, 0x0, 0x0., v4_int32 = .0xdeadbeef, 0xdeadbeef, 0xdeadbeef, 0xdeadbeef., v8_int16 = .0xdead, 0xbeef, 0xdead, 0xbeef, 0xdead, 0xbeef, 0xdead, 0xbeef., v16_int8 = .0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef, 0xde, 0xad, 0xbe, 0xef.."
 
 set vector_register3 ".uint128 = 0x00000001000000010000000100000001, v2_double = .0x0, 0x0., v4_float = .0x0, 0x0, 0x0, 0x0., v4_int32 = .0x1, 0x1, 0x1, 0x1., v8_int16 = .0x0, 0x1, 0x0, 0x1, 0x0, 0x1, 0x0, 0x1., v16_int8 = .0x0, 0x0, 0x0, 0x1, 0x0, 0x0, 0x0, 0x1, 0x0, 0x0, 0x0, 0x1, 0x0, 0x0, 0x0, 0x1.."
 
@@ -123,41 +123,24 @@ for {set i 0} {$i < 32} {incr i 1} {
     gdb_test "info reg vr$i" "vr$i.*$vector_register3_vr" "info reg vr$i"
 }
 
-# Create a core file.  We create the core file before the F32~F63/VR0~VR31 test
-# below because then we'll have more interesting register values to verify
-# later when loading the core file (i.e., different register values for different
-# vector register banks).
+set escapedfilename [string_to_regexp ${objdir}/${subdir}/vsx-core.test]
 
-set core_supported [gdb_gcore_cmd "${objdir}/${subdir}/vsx-core.test" \
-			"Save a VSX-enabled corefile"]
+set core_supported 0
 
-# Now run the F32~F63/VR0~VR31 tests.
-
-# 1: Set F32~F63 registers and check if it reflects on VR0~VR31.
-for {set i 32} {$i < 64} {incr i 1} {
-    gdb_test_no_output "set \$f$i = 1\.3"
+gdb_test_multiple "gcore ${objdir}/${subdir}/vsx-core.test" \
+        "Save a VSX-enabled corefile" \
+{
+  -re "Saved corefile ${escapedfilename}\[\r\n\]+$gdb_prompt $" {
+    pass "Save a VSX-enabled corefile"
+    global core_supported
+    set core_supported 1
+  }
+  -re "Can't create a corefile\[\r\n\]+$gdb_prompt $" {
+    unsupported "Save a VSX-enabled corefile"
+    global core_supported
+    set core_supported 0
+  }
 }
-
-for {set i 0} {$i < 32} {incr i 1} {
-    gdb_test "info reg vr$i" "vr$i.*$vector_register1_vr" "info reg vr$i (doubleword 0)"
-}
-
-# 2: Set VR0~VR31 registers and check if it reflects on F32~F63.
-for {set i 0} {$i < 32} {incr i 1} {
-        for {set j 0} {$j < 4} {incr j 1} {
-           gdb_test_no_output "set \$vr$i.v4_int32\[$j\] = 0xdeadbeef"
-        }
-}
-
-for {set i 32} {$i < 64} {incr i 1} {
-    gdb_test "info reg f$i" "f$i.*$float_register" "info reg f$i"
-}
-
-for {set i 0} {$i < 32} {incr i 1} {
-    gdb_test "info reg vr$i" "vr$i.*$vector_register2_vr" "info reg vr$i (doubleword 1)"
-}
-
-# Test reading the core file.
 
 if {!$core_supported} {
   return -1
